<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlackCherry"
        android:textSize="@dimen/dialog_desc"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tool:text="@string/enter_the_password"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dialog_desc"
        android:hint="@string/enc_key_hint"
        android:maxLength="16"
        android:maxLines="1"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesc" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRemainInfinityLockCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTomato"
        android:textSize="@dimen/dialog_desc"
        android:textStyle="bold"
        android:gravity="right"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tool:text="@string/remain_infinity_lock_count"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id='@+id/btnYes'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="@dimen/dialog_button"
        android:background="@color/colorTransparent"
        android:textColor="@color/colorBlackCherry"
        android:text="@string/ok"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRemainInfinityLockCount" />
    <androidx.appcompat.widget.AppCompatButton
        android:id='@+id/btnNo'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_button"
        android:background="@color/colorTransparent"
        android:textColor="@color/colorGray"
        android:text="@string/cancel"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnYes"
        app:layout_constraintTop_toBottomOf="@+id/txtRemainInfinityLockCount" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRemainTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTomato"
        android:textSize="@dimen/dialog_desc"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btnYes"
        app:layout_constraintTop_toTopOf="@+id/btnYes"
        app:layout_constraintBottom_toBottomOf="@+id/btnYes"
        tool:text="@string/remain_time"/>
</androidx.constraintlayout.widget.ConstraintLayout>