<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vmAddMemo"
            type="com.example.encryptionmemo.viewModel.AddMemoViewModel"/>
        <import
            alias="util"
            type="com.example.encryptionmemo.common.Utils"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTitle"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="7dp"
                android:src="@drawable/ic_back"
                android:onClick="@{vmAddMemo::onBack}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlackCherry"
                android:textSize="@dimen/dialog_title"
                android:textStyle="bold"
                android:text="@string/title_addmemo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                tools:text="TITLE"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRemove"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="7dp"
                android:src="@drawable/ic_back"
                android:onClick="@{vmAddMemo::onBack}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLock"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            encDrawable="@{vmAddMemo.hasEnc}"
            android:onClick="@{vmAddMemo::onClickEnc}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTitle"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{util.getLockString(vmAddMemo.hasEnc)}"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/ivLock"
            app:layout_constraintBottom_toBottomOf="@+id/ivLock"
            app:layout_constraintStart_toEndOf="@+id/ivLock"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_title"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivLock"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_round10_black_frame"
            android:hint="@string/hint_add_title"
            android:maxLength="64"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:text="@={vmAddMemo.title}"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/enter_a_ID"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etData"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_round10_black_frame"
            android:gravity="start|top"
            android:hint="@string/hint_add_ID"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:text="@={vmAddMemo.data}"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvID" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/enter_a_PW"
            android:textColor="@color/colorBlackCherry"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etData" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etData2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_round10_black_frame"
            android:gravity="start|top"
            android:hint="@string/hint_add_PW"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:text="@={vmAddMemo.data2}"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPW" />

        <androidx.appcompat.widget.AppCompatButton
            android:id='@+id/btnSave'
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:textSize="@dimen/dialog_title"
            android:background="@color/colorDodgerBlueTransparency"
            android:textColor="@color/colorWhite"
            android:text="@string/save"
            android:stateListAnimator="@null"
            android:onClick="@{vmAddMemo::onClickSave}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>